--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Alarm.cs" />
     <Compile Include="Assets\Scripts\AudioFadeOut.cs" />
+    <Compile Include="Assets\Scripts\CustomManager.cs" />
     <Compile Include="Assets\Scripts\DoorsButtton.cs" />
     <Compile Include="Assets\Scripts\DoorsText.cs" />
     <Compile Include="Assets\Scripts\Doppler.cs" />
